# zpf2017

./: README.md
Code/Par/: Makefile
Code/Par/Marlow/: Makefile
Code/TH/QQ/: qq.cabal
Lab/: lab04-dtp.md
Slides/01Typ1/: 01typy.md
Slides/02QC/: 02testy.md  Tree91.hs~
Slides/03TH/: 03meta.md
Slides/03Typ2/: 03typy2.md  Promo1.hs
Slides/04Typ2/: 04typy2.md  Promo1.hs  SingletonsNat.hs  TypeApp.hs  Vec1.hs
www/: 01typy-slides.html  01typy.html  02testy-slides.html  02testy.html  03meta.html  03typy2-slides.html  03typy2.html  04meta-slides.html  04typy2-slides.html  04typy2.html  05par-slides.html  05par.html
