name:                qq
version:             0.0.0.1
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Marcin Benke
maintainer:          marcin.benke@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable TestAuto
  main-is:             TestExprQuote1.hs
  other-modules:       Expr, ExprQuote1
  other-extensions:    TemplateHaskell
  build-depends:       base >=4.7, parsec, template-haskell
  -- hs-source-dirs:      
  default-language:    Haskell2010